# chaddr

./: .gitignore  LICENSE  README.md  chaddr.bash  chaddr.conf.template  chaddr.py  meson.build  meson_options.txt  requirements.txt
chaddr/: __init__.py  __main__.py  _version.py  address.py  buildconfig.py.in  cli.py  config.py  logutil.py  meson.build  namecheap_portal.py  orchestrator.py  privilege.py  profile.py  profile_lexer.py  proxy.py  public_ip.py
chaddr/gui/: __init__.py  address_panel.py  app.py  diagnostics_format.py  editor.py  highlighter.py  theme.py
chaddr/types/: __init__.py  aliyun_elastic_ip.py  aws_elastic_ip.py  base.py  bind_db.py  hosts_file.py  plain_file.py  registered_nameserver.py
debian/: chaddr.postinst  changelog  control  copyright  rules
man/: chaddr-profile.5.in  chaddr.1.in
profile/: example
scripts/: chaddr.in  git-version
